--- a/automl-tabular-classification.ipynb
+++ b/automl-tabular-classification.ipynb
@@ -625,7 +625,7 @@
    ],
    "source": [
     "# Constructs a AutoML Tabular Training Job\n",
-    "job = # TODO 1 -- Your code goes here(\n",
+    "job = airplatform.AutoMLTabularTrainingJob(\n",
     "    display_name=\"train-petfinder-automl-1\",\n",
     "    optimization_prediction_type=\"classification\",\n",
     "    column_transformations=[\n",
@@ -646,11 +646,13 @@
     "\n",
     "# Create and train the model object\n",
     "# This will take around two hour and half to run\n",
-    "model = # TODO 2a -- Your code goes here(\n",
+    "model = job.run(\n",
     "    dataset=ds,\n",
     "    target_column=\"Adopted\",\n",
     "    # Define training, validation and test fraction for training\n",
-    "    # TODO 2b -- Your code goes here \n",
+    "    training_fraction_split=0.8,
+    "    validation_fraction_split=0.1,
+    "    test_fraction_split=0.1,
     "    model_display_name=\"adopted-prediction-model\",\n",
     "    disable_early_stopping=False,\n",
     ")"
@@ -706,7 +708,7 @@
    ],
    "source": [
     "# Deploy the model resource to the serving endpoint resource \n",
-    "endpoint = # TODO 3 -- Your code goes here(\n",
+    "endpoint = model.deploy(\n",
     "    machine_type=\"n1-standard-4\",\n",
     ")"
    ]
@@ -755,7 +757,7 @@
    ],
    "source": [
     "# Make a prediction using the sample values \n",
-    "prediction = # TODO 4 -- Your code goes here(\n",
+    "prediction = endpoint.predict(\n",
     "    [\n",
     "        {\n",
     "            \"Type\": \"Cat\",\n",
